sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: ')' expected but ',' found.
      for (j<- 0,i) {
                ^AlgBubbleSort2:11: error: illegal start of simple expression
    }
    ^